# amana-dsl

./: .gitattributes  .gitignore  AMANA_DEVELOPMENT_STANDARDS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  app.py  implementation_plan.md  package-lock.json  package.json  playwright.config.js  task.md  تحويلها الى غير محدودة.md  مشاكل اخرى لحل مشاكل التكرار في التصميم .md
.github/: PULL_REQUEST_TEMPLATE.md
amana-live-compiler/: .gitignore  README.md  package-lock.json  package.json  server.js
apps/: README.md
chatbot_app/: app.amana  theme.amana
component_test/: accessibility.amana  pattern_compare.amana  responsive.amana  semantic_errors.amana  showcase.amana  stress.amana  theme_linear.amana  theme_luxury.amana  theme_stripe.amana  variants_stress.amana  visual_baseline.amana
crm_app/: app.amana  theme.amana
doc/: AMANA_VISUAL_LANGUAGE_AUDIT.md  README.md  cli-dx.md  css-theme-rtl.md  design-anti-patterns.md  design-bugs-prevention.md  examples-gallery.md  getting-started.md  html-components-forms.md  language-inventory.generated.md  language-runtime-trust-plan.md  language.md  live-preview.md  multi-file-lsp.md  node-runtime-security.md  roadmap.md
docs/: index.html
examples/: 01_saas_aura.amana  02_maison_luxe.amana  03_vortex_console.amana  04_nova_creative.amana  05_cura_wellness.amana  06_pro_dashboard.amana  07_nexus_portal.amana  08_atelier_aurelia.amana  README.md  landing.amana  royal_deck.amana  test_ternary.amana
scripts/: e2e-smoke.ps1  extract_and_generate_tests.py  generate_stress_file.js  language_inventory.py  (+2 more)
(+123 files in other folders)
