[package]
name = "amana_compiler"
version = "0.1.0"
edition = "2024"
default-run = "amana"
description = "A declarative full-stack DSL compiler. Write .amana, get a production-ready Express/SQLite app."
repository = "https://github.com/akleeko2/amana-dsl"
homepage = "https://github.com/akleeko2/amana-dsl"
documentation = "https://github.com/akleeko2/amana-dsl/tree/main/doc"
license = "AGPL-3.0-only"
keywords = ["dsl", "compiler", "web", "codegen", "fullstack"]
categories = ["compilers", "web-programming", "command-line-utilities"]
readme = "README.md"
exclude = [
    "target/",
    "examples/.amana_*/",
    ".amana_*/",
    "app.py",
    "implementation_plan.md",
]

[[bin]]
name = "amana"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
